# django-store

./: README.md  db.sqlite3  pyproject.toml
django_store/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  urls.py  views.py
products/fixtures/: categories.json  goods.json
products/migrations/: 0001_initial.py
products/templates/products/: base.html  index.html  products.html
tests/: test_django_store.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  registration.html
