[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["znammikhail <znamenskymihail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
